# iot-embeddedc

./: .gitignore  CMakeLists.txt  README.md  build.sh  buildlib.sh  devicemanagementclient.c  devicemanagementclient.h  gatewayclient.c  iotfclient.c  iotfclient.h  iotfgwclient.c  iotfgwclient.h  setup.sh
lib/: CMakeLists.txt
samples/: CMakeLists.txt  Makefile  README.md  build.sh  device.cfg  gateway.cfg  helloWorld.c  sampleDMActions.c  sampleDMFirmwareActions.c  sampleDevice.c  sampleDeviceManagement.c  sampleGateway.c
src/: CMakeLists.txt  buildlib.sh  deviceclient.c  deviceclient.h  devicemanagementclient.c  devicemanagementclient.h  gatewayclient.c  gatewayclient.h  iotf_network_tls_wrapper.c  iotf_network_tls_wrapper.h  iotf_utils.c  iotf_utils.h  iotfclient.c  iotfclient.h
test/: CMakeLists.txt  device.cfg  device_with_csc.cfg  gateway.cfg  gateway_with_csc.cfg  null_values.cfg  testUtils.c  test_deviceclient.c  test_devicemgmt.c  test_gatewayclient.c  test_iotfclient.c
