cmake_minimum_required(VERSION 2.8)
add_library(cJSON cJSON.c)
add_library(mqttclient MQTTClient.c)
add_library(mqttlinux MQTTLinux.c)
add_library(mqttformat MQTTFormat.c)
add_library(mqttpacket MQTTPacket.c)
add_library(mqttdespublish MQTTDeserializePublish.c)
add_library(mqttconnectclient MQTTConnectClient.c)
add_library(mqttsubscribeclient MQTTSubscribeClient.c)
add_library(mqttserpublish MQTTSerializePublish.c)
add_library(mqttconnectserver MQTTConnectServer.c)
add_library(mqttsubscribeserver MQTTSubscribeServer.c)
add_library(mqttunsubscribeserver MQTTUnsubscribeServer.c)
add_library(mqttunsubscribeclient MQTTUnsubscribeClient.c)
